# pislave

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.cpp  config.h  config.txt  datalogparser.cpp  datalogparser.h  emu_autotemp.c  emu_heatpump.c  field.h  ithowp.service  pimaster2.c  pimaster82.c  pislave.cpp  pislave82.cpp  sqlite.db
pi_master/: CMakeLists.txt  pimaster.cpp  pimaster2.c
pi_slave/: CMakeLists.txt  config.cpp  config.h  config.txt  conversion.cpp  conversion.h  counterparser.cpp  counterparser.h  datalogparser.cpp  datalogparser.h  field.h  pislave.cpp  pislave82.cpp  wpu_state.h
support/: emu_autotemp.c  emu_heatpump.c  i2clisten.cpp  ithowp.service  ithowp_request.service  ithowp_request.timer  ithowp_request_counter.service  ithowp_request_counter.timer
